--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -20,7 +20,7 @@
   "noempty": true,
   "nonbsp": true,
   "nonew": true,
-  "plusplus": true,
+  "plusplus": false,
   "quotmark": "double",
   "undef": true,
   "unused": true,
