--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -18,7 +18,7 @@
   "newcap": true,
   "noarg": true,
   "noempty": true,
-  "nonbsp": true,
+  "nonbsp": false,
   "nonew": true,
   "plusplus": false,
   "quotmark": "double",
