--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bitstampCurrentPrices",
-  "title": "Display the latest Bitstamp Bitcoin prices with jquery-bitstampCurrentPrices",
-  "description": "A jQuery plugin that retreives and displays the latest Bitstamp Bitcoin prices",
-  "version": "0.2.2",
+  "title": "Display the latest Bitstamp Bitcoin prices in your local curreny with jquery-bitstampCurrentPrices",
+  "description": "A jQuery plugin that retreives and displays the latest Bitstamp Bitcoin prices in a range of currencies.",
+  "version": "0.3.0",
   "main": "bitstampCurrentPrices.js",
   "homepage": "https://github.com/bit-2-bit/bitstamp-current-prices",
   "author": {
